# usb-audio-rs

./: README.md
pic32/: .gitignore  Cargo.toml  build.rs  build.sh  memory.x
pic32/.cargo/: config.toml
pic32/src/: audio.rs  main.rs  usb_isr.rs  visu.rs
